# toybox

./: README.md
ai/: README.md  pyproject.toml  script.py  test_utils.py  utils.py
automation/chatbot/: chat.py  requirements.txt
data-science/bike-journey-predictions/: README.md  report.ipynb  requirements.txt
reports/github-repo-stats/: README.md  main.py  pyproject.toml
visualisations/budget-sunburst/: README.md  index.html  spend.json
visualisations/github-reviews/: README.md  generate_visualisation.py  index.html  requirements.txt
visualisations/github-reviews/js/: cytoscape-qtip.min.js
visualisations/notion-tree/: README.md  generate_flare.py  index.html
visualisations/youtube-history/: README.md  Untitled.ipynb  dash_demo.py  main.ipynb  main.py  requirements.txt  visual_plot.py
